# NewsBot

./: .gitignore  IMPROVEMENTS.md  Makefile  PR_DESCRIPTION.md  README.md  digest.md  pyproject.toml
news_digest_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
newsbot/: __init__.py  cli.py  config.py  fetch.py  log.py  metrics.py  models.py  prompts.py  render.py  search.py  store.py  summarise.py  triage.py  utils.py
tests/: test_cli_metrics.py  test_render.py  test_search.py  test_summarise.py  test_triage.py  test_utils.py
